fix width/height spacing

--- a/assets/css/ted.css
+++ b/assets/css/ted.css
@@ -315,3 +315,16 @@
 ._1on2i2qy:focus, ._1on2i2qy:focus-within,._1on2i2qy:hover{
   box-shadow: rgb(176 176 176) 0 0 0 1px inset !important;
 }
+
+/* PRODUCT_PLUS-SPECIFIC CLASSES */
+._114q92b {
+	flex: 1 0 auto !important;
+	margin-left: 8px !important;
+}
+
+
+@media (min-width: 744px){
+  ._1lplc7 {
+    flex: 0 0 72px !important;
+  }
+}
